# cp2077-red-httpclient

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  bundle.mjs  install.mjs  red.config.json
examples/cet/: init.lua
examples/redscript/: CatFactsSystem.reds
include/: RedHttpClient.hpp
include/src/: AsyncHttpClient.hpp  Enums.hpp  HttpCallback.hpp  HttpClient.hpp  HttpHeader.hpp  HttpMultipart.hpp  HttpPair.hpp  HttpResponse.hpp  HttpStatus.hpp
scripts/RedHttpClient/: AsyncHttpClient.reds  HttpCallback.reds  HttpClient.reds  HttpHeader.reds  HttpMultipart.reds  HttpPair.reds  HttpResponse.reds  HttpStatus.reds
scripts/RedHttpClient/Test/: AsyncHttpClientTest.reds  HttpClientTest.reds  Main.reds  MainTest.reds
src/: AsyncHttpClient.cpp  AsyncHttpClient.h  Config.h.in  HttpCallback.h  HttpClient.cpp  HttpClient.h  HttpHeader.h  HttpMethod.h  HttpMultipart.h  HttpPair.h  HttpPlugin.cpp  HttpPlugin.h  HttpResponse.h  HttpStatus.h  Settings.h  main.cpp
